--- a/tarefa6.html
+++ b/tarefa6.html
@@ -29,8 +29,14 @@
     </style>
 </head>
 <body>
-    <h1>Imagem do Gerenciador de tarefas:</h1>
-    <img src="Pratica da atividade 1 SOP- 2 Bim/Gerenciador de tarefas - Tarefa 7.png">
-    <h1>Organizar janelas no computador é como buscar ordem em meio ao fluxo de ideias quando o sistema facilita, tudo flui com leveza; quando não, cada clique vira um desafio. É nesse equilíbrio entre clareza e confusão que mora a beleza (ou o caos) da nossa experiência digital.</h1>  
+    <h1>O wordpad abria uma pesquisa no chrome sobre como usar o Wordpad, no qual o copilot responida</h1>
+    <h1>Imagem das informações do Sistema (a) Sobre nome do SO e Versão:</h1>
+    <img src="Pratica da atividade 1 SOP- 2 Bim/SO - Tarefa 6.png">
+    <h1>Imagem das informações do Sistema (b) Modelo do Sistema:</h1>
+    <img src="Pratica da atividade 1 SOP- 2 Bim/Sistema - Tarefa 6.png">
+    <h1>Imagem das informações do Sistema (c) Processador:</h1>
+    <img src="Pratica da atividade 1 SOP- 2 Bim/Processador - Tarefa 6.png">
+    <h1>Imagem das informações do Sistema (d) Memória Física Total Instalada (RAM):</h1>
+    <img src="Pratica da atividade 1 SOP- 2 Bim/RAM - Tarefa 6.png">
 </body>
 </html>
