--- a/tarefa4.html
+++ b/tarefa4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarefa 6</title>
+    <title>Tarefa 4</title>
     <style>
     body {
         font-family: Arial, sans-serif;
@@ -29,8 +29,13 @@
     </style>
 </head>
 <body>
-    <h1>Imagem do Gerenciador de tarefas:</h1>
-    <img src="Pratica da atividade 1 SOP- 2 Bim/Gerenciador de tarefas - Tarefa 7.png">
-    <h1>Organizar janelas no computador é como buscar ordem em meio ao fluxo de ideias quando o sistema facilita, tudo flui com leveza; quando não, cada clique vira um desafio. É nesse equilíbrio entre clareza e confusão que mora a beleza (ou o caos) da nossa experiência digital.</h1>  
+    <h1>Imagem da Estruturas da Pasta:</h1>
+    <img src="Pratica da atividade 1 SOP- 2 Bim/Estrutura - Tarefa 4.png">
+    <h1>Imagem da ação "mover":</h1>
+    <img src="Pratica da atividade 1 SOP- 2 Bim/Mover - Tarefa 4.png">
+    <h1>Imagem da ação "copiar":</h1>
+    <img src="Pratica da atividade 1 SOP- 2 Bim/Copiar - Tarefa 4.png">
+    <h1>Imagem da ação "renomear":</h1>
+    <img src="Pratica da atividade 1 SOP- 2 Bim/Renomear - Tarefa 4.png">
 </body>
 </html>
